Edite in Feature file and add search item in Related files as Step def and Admin page  and

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,8 @@
                         </suiteXmlFiles>
                         <testFailureIgnore>true</testFailureIgnore>
                         <systemPropertyVariables>
-                            <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                            <allure.results.directory>${project.build.directory}/allure-results
+                            </allure.results.directory>
                         </systemPropertyVariables>
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
