Update Naming  for Project

--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
-    <artifactId>flairstech_Task</artifactId>
+    <artifactId>OrangHRMAutomationbyCucumberjava</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>flairstech_Task</name>
+    <name>HRM Automation by Cucumber java </name>
     <url>https://opensource-demo.orangehrmlive.com/web/index.php/auth/login</url>
 
     <properties>
